# cmake_minimum_required(VERSION 3.0.0)
# project(TabackoListSERVER VERSION 0.1.0)

# include(CTest)
# enable_testing()

# # add_subdirectory(${PROJECT_SOURCE_DIR}/../Common)

# add_executable(${PROJECT_NAME} main.cpp)

# target_link_libraries(${PROJECT_NAME} PUBLIC Hello)

# target_include_directories(${PROJECT_NAME} PUBLIC
#                             "${PROJECT_BINARY_DIR}"
#                             ${PROJECT_SOURCE_DIR}/../Common)


# # set(CPACK_PROJECT_NAME ${PROJECT_NAME})
# # set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# # include(CPack)
